Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40976

Fusion style: Black icon background when using stylesheet in QComboBox

XMLWordPrintable

    • 648587fbdc840209272211ec609c70ac056d0744

      When setting a background color to QComboBox with stylesheet

      setStyleSheet("QComboBox{ background-color: #dedede}");
      

      the background of the previously selected item's icon is black when hovering over the other items. This doesn't depend on set background-color, it is always black.

      For comparison, in QComboBox without a stylesheet, the color is a tad darker grey than the background (i.e. merged palette background and highlight colors).

      See the attached screenshots. I'll also attach a simple example to reproduce the problem.

        1. QComboBox_with_stylesheet.png
          11 kB
          Qt Support
        2. QComboBox_without_stylesheet.png
          11 kB
          Qt Support
        3. qtbug40976.zip
          5 kB
          Qt Support
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            smd Jan Arve
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes